--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <br>
       <br>
-      <button type="button"><a href="dicee.html" class="btn">Take a Try</a></button>
+      <button type="button"><a href="index.html" class="btn">Take a Try</a></button>
     </div>
 
     <script src="index.js"></script>
